--- a/build.gradle
+++ b/build.gradle
@@ -7,40 +7,29 @@
  */
 
 // Apply the java-library plugin to add support for Java Library
-apply plugin: 'java-library'
+apply plugin: 'java'
+
+sourceCompatibility = 1.8
 
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
-    jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    //There are 2 ways to list the dependency information.  This way is the short cut
-    compile 'ch.qos.logback:logback-classic:1.1.1'
-
-    // This dependency is exported to consumers, that is to say found on their compile classpath.
-    api 'org.apache.commons:commons-math3:3.6.1'
-
-    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:21.0'
-
-    // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
-
+    compile 'io.rest-assured:json-path:3.0.7'
+    testCompile 'io.rest-assured:rest-assured:3.0.7'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "com.google.truth:truth:0.39"
+    compile 'com.googlecode.json-simple:json-simple:1.1.1'
     // https://mvnrepository.com/artifact/org.testng/testng
-    testCompile group: 'org.testng', name: 'testng', version: '6.10'
-
-    //An assertion library that is better than JUnit defaults
-    testCompile 'org.easytesting:fest-assert-core:2.0M10'
-
-    testCompile 'io.rest-assured:rest-assured:3.0.3'
-    compile 'io.rest-assured:json-path:3.0.3'
-    testCompile 'io.rest-assured:json-schema-validator:3.0.3'
-
-    // https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all
-//    testCompile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
-
+    testCompile group: 'org.testng', name: 'testng', version: '6.14.2'
 }
 
+test {
+    useTestNG {
+        suites 'src/test/resources/testng.xml'
+    }
+}
